--- a/index.ipynb
+++ b/index.ipynb
@@ -63,14 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import sqlite, create a connection and then a cursor object.\n",
-    "import sqlite3 \n",
-    "conn = sqlite3.connect('dogs.db')\n",
-    "c = conn.cursor()"
+    "#Your code here; import sqlite, create a connection and then a cursor object."
    ]
   },
   {
@@ -91,26 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Little Ann', 'coonhound'),\n",
-       " ('Pickles', 'black lab'),\n",
-       " ('Lassie', 'collie'),\n",
-       " ('Snowy', 'fox terrier')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT name, breed FROM dogs WHERE gender = 'F';''').fetchall()"
+    "#Your code here"
    ]
   },
   {
@@ -122,31 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(None,),\n",
-       " ('Clifford',),\n",
-       " ('Lassie',),\n",
-       " ('Little Ann',),\n",
-       " ('McGruff',),\n",
-       " ('Pickles',),\n",
-       " ('Scooby',),\n",
-       " ('Snoopy',),\n",
-       " ('Snowy',)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT name FROM dogs ORDER BY name;''').fetchall()"
+    "#Your code here"
    ]
   },
   {
@@ -158,23 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT * FROM dogs WHERE name IS NULL;''').fetchall()"
+    "#Your code here"
    ]
   },
   {
@@ -186,23 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Scooby', 'great dane')]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT name, breed FROM dogs WHERE temperament = 'hungry';''').fetchall()"
+    "#Your code here"
    ]
   },
   {
@@ -214,23 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Pickles', 13, 'mischievous')]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT name, age, temperament FROM dogs ORDER BY age DESC LIMIT 1;''').fetchall()"
+    "#Your code here"
    ]
   },
   {
@@ -242,25 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
-       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
-       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT * FROM dogs ORDER BY age LIMIT 3;''').fetchall()"
+    "#Your code here"
    ]
   },
   {
@@ -272,27 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('McGruff', 'bloodhound'),\n",
-       " ('Scooby', 'great dane'),\n",
-       " ('Little Ann', 'coonhound'),\n",
-       " ('Lassie', 'collie'),\n",
-       " ('Snowy', 'fox terrier')]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT name, breed FROM dogs WHERE age BETWEEN 5 AND 10;''').fetchall()"
+    "#Your code here"
    ]
   },
   {
@@ -304,23 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Scooby', 'great dane')]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Your code here\n",
-    "c.execute('''SELECT name, age FROM dogs WHERE temperament = 'hungry' AND age BETWEEN 2 AND 7 ORDER BY name;''').fetchall()"
+    "#Your code here"
    ]
   },
   {
